--- a/employed/popup/popup.css
+++ b/employed/popup/popup.css
@@ -1,20 +1,41 @@
 body {
   width: 200px;
-  height: 362px;
-  background-color: #777;
+  height: 355px;
+  background-color: #000;
   color: #777;
   font-size: 13px;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 10px 20px 20px 10px;
+}
+
+#logo {
+  color: #fff;
+  border-radius: 5px 5px 0px 0px;
+  background-color: #f765a6;
+  padding: 5px;
+  text-align: center;
+}
+
+#logo img {
+  margin: 0 auto;
+}
+
+#logo h3 {
+  margin: 0 auto;
 }
 
 ::-webkit-datetime-edit {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-div {
+#canvas {
   border-radius: 5px;
   background-color: #ffffff;
-  padding: 20px;
+  box-shadow: 10px 10px #0071fb;
+}
+
+#canvas #search-form {
+    padding: 20px;
 }
 
 input[type=checkbox], select {
@@ -89,6 +110,6 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #0071fb;
+  background-color: #f765a6;
   transition: .5s;
 }
